1.0.0 to 1.1.0
----------------------------------------------------------------------
- Added the ability to display reports on the response time for
  HTTP, DNS and DHCP polls. Bug 612
- Added a new XML file called webui-colors. Currently this only
  allows one to set the colors for the categories display,
  but this will grow to include all the colors in the Web UI.
- Since the UEI is just a string, removed the "http://" and all
  references to "bluebird" in UEIs.
- Disallowed spaces in Path names. Bug 657
- Removed borders around Event and Notification lists (per Larry)
- Added the ability to match an event to more than one notification.
  Added the boolean "match-all" to the notifd configuration to
  control this (default is false or off). Thx Nick Wesselman for
  most of the code for this.
- Fixed a small bug with wildcards in eventconf.xml
- Added a "clear" attribute to the acknowledge tag for notifications,
  so now the "up" can be ack'd along with the "down". Bug 544
- Added a "title" to categories to reflect the last update. Bug 517
- Fixed the AM/PM in the Performance Report drop down. Bug 515
- Fixed some typos and bad URLs in error messages. Bug 662
- Changed all references to Hashtable (deprecated) to HashMap
- Fixed multipart message mistake. Bug 591
- Added the ability to associate events in eventconf.xml with 
  specific parameters (varbinds). Bug 626
- Modified eventconf.xml to allow for event definition files to be
  included using the <event-file> tag.
- Added a Threshold Rearm event for both Low and High Thresholds.
- Added an Admin GUI page for deleting nodes. Bug 602
- Added the ability to select which non-IP interfaces would be 
  scheduled for data collection, and built an Admin WebUI page
  to configure it. Bug 616
- Loopback interfaces will now be discovered, and are preferred
  as the Primary SNMP interface. Applies to non-127.*.*.*
  interfaces only.
- fixed issue with capsd pulling all of the ifTable for interface.