@@ -1,5 +1,9 @@
 1.0.0 to 1.1.0
 ----------------------------------------------------------------------
+- Added two new fields for notifications: %nodelabel% will return
+  the nodelabel for the nodeid in the event, and %interfaceresolve%
+  will return the hostname for the IP address of the interface.
+  (Thx Nick W). Bug 654 
 - Added the ability to display reports on the response time for
   HTTP, DNS and DHCP polls. Bug 612
 - Added a new XML file called webui-colors. Currently this only
